[tool.poetry]
name = "py_soccer"
version = "0.1.0"
description = ""
authors = ["Joseph <joseph.ve@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pygame = "^2.1.2"
pymunk = "^6.2.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
